[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/puzzles/wall_puzzle_1.gd" type="Script" id=1]
[ext_resource path="res://scenes/puzzle_scenes/puzzle2d_wall_puzzle_01.tscn" type="PackedScene" id=2]

[sub_resource type="QuadMesh" id=1]

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("puzzle/puzzle_pillar/Viewport")

[sub_resource type="SpatialMaterial" id=3]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
flags_albedo_tex_force_srgb = true
albedo_texture = SubResource( 2 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.500956, 0.500469, 0.00457398 )

[node name="puzzle_other_room" type="StaticBody" groups=[
"lookable_object",
"usable_object",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.6202, 0, -3.21747 )
script = ExtResource( 1 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 512, 512 )
usage = 0
render_target_v_flip = true
render_target_update_mode = 3
gui_disable_input = true

[node name="puzzle" parent="Viewport" instance=ExtResource( 2 )]

[node name="puzzle_screen_plane" type="MeshInstance" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 3 )

[node name="Area" type="Area" parent="puzzle_screen_plane"]

[node name="CollisionShape" type="CollisionShape" parent="puzzle_screen_plane/Area"]
shape = SubResource( 4 )

[node name="puzzle_camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.439078 )

[node name="SpotLight" type="SpotLight" parent="puzzle_camera"]
transform = Transform( 1, 0, 0, 0, 1, -1.14935e-14, 0, -1.14935e-14, 1, 0, -0.0049119, -0.00850773 )
visible = false
light_energy = 2.0
spot_range = 2.0

[node name="player_position" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.878054, 0.43753, 0 )
